-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 19, 20
-
Component/s: client-libs
-
b18
-
other
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8366821 | 17.0.18-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8367678 | 17.0.18 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8366822 | 11.0.30-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8366706 | 8u481 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
- backported by
-
JDK-8366706 Memory leak in getAllConfigs of awt_GraphicsEnv.c:386
-
- Resolved
-
-
JDK-8366821 Memory leak in getAllConfigs of awt_GraphicsEnv.c:386
-
- Resolved
-
-
JDK-8366822 Memory leak in getAllConfigs of awt_GraphicsEnv.c:386
-
- Resolved
-
-
JDK-8367678 Memory leak in getAllConfigs of awt_GraphicsEnv.c:386
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/1166a8ab
-
Commit(master)
openjdk/jdk17u-dev/fceca5a9
-
Review
openjdk/jdk/10378
-
Review(master)
openjdk/jdk17u-dev/3919