8292214: Memory leak in getAllConfigs of awt_GraphicsEnv.c:386

Backport-of: 1166a8abd2e5fba16b5cd29431de2628a52a8e08